@@ -2,9 +2,14 @@
 package edu.colorado.phet.moleculepolarity.common.view;
 
 import edu.colorado.phet.common.piccolophet.PhetPNode;
+import edu.colorado.phet.moleculepolarity.MPColors;
+import edu.colorado.phet.moleculepolarity.MPConstants;
 import edu.colorado.phet.moleculepolarity.common.control.MoleculeRotationHandler;
 import edu.colorado.phet.moleculepolarity.common.control.RotateCursorHandler;
 import edu.colorado.phet.moleculepolarity.common.model.DiatomicMolecule;
+import edu.colorado.phet.moleculepolarity.common.view.PartialChargeNode.OppositePartialChargeNode;
+import edu.colorado.phet.moleculepolarity.common.view.ViewProperties.SurfaceType;
+import edu.umd.cs.piccolo.PNode;
 
 /**
  * Visual representation of a diatomic molecule.
@@ -14,13 +19,57 @@ import edu.colorado.phet.moleculepolarity.common.model.DiatomicMolecule;
  */
 public class DiatomicMoleculeNode extends PhetPNode {
 
+    private final PNode electrostaticPotentialNode, electronDensityNode;
+    private final PNode partialChargeNodeA, partialChargeNodeB;
+    private final PNode bondDipoleNode;
+
     public DiatomicMoleculeNode( DiatomicMolecule molecule ) {
 
-        addChild( new BondNode( molecule.bond ) ); // bond behind atoms
-        addChild( new AtomNode( molecule.atomA ) );
-        addChild( new AtomNode( molecule.atomB ) );
+        // nodes
+        electrostaticPotentialNode = new DiatomicElectrostaticPotentialNode( molecule, MPConstants.ELECTRONEGATIVITY_RANGE, MPColors.RWB_GRADIENT );
+        electronDensityNode = new DiatomicElectronDensityNode( molecule, MPConstants.ELECTRONEGATIVITY_RANGE, MPColors.BW_GRADIENT );
+        final PNode bondNode = new BondNode( molecule.bond );
+        final AtomNode atomANode = new AtomNode( molecule.atomA );
+        final AtomNode atomBNode = new AtomNode( molecule.atomB );
+        partialChargeNodeA = new OppositePartialChargeNode( molecule.atomA, molecule.bond );
+        partialChargeNodeB = new OppositePartialChargeNode( molecule.atomB, molecule.bond );
+        bondDipoleNode = new BondDipoleNode( molecule.bond );
 
+        // rendering order:
+        // surfaces
+        addChild( new PNode() {{
+            addChild( electrostaticPotentialNode );
+            addChild( electronDensityNode );
+        }} );
+        // structure
+        addChild( new PNode() {{
+            addChild( bondNode ); // bond behind atoms
+            addChild( atomANode );
+            addChild( atomBNode );
+        }} );
+        // decorations
+        addChild( new PNode() {{
+            addChild( partialChargeNodeA );
+            addChild( partialChargeNodeB );
+            addChild( bondDipoleNode );
+        }} );
+
+        // rotate molecule by dragging anywhere
         addInputEventListener( new RotateCursorHandler() );
         addInputEventListener( new MoleculeRotationHandler( molecule, this ) );
+    }
+
+    public void setSurface( SurfaceType surfaceType ) {
+        electrostaticPotentialNode.setVisible( surfaceType == SurfaceType.ELECTROSTATIC_POTENTIAL );
+        electronDensityNode.setVisible( surfaceType == SurfaceType.ELECTRON_DENSITY );
+    }
+
+    public void setPartialChargesVisible( boolean visible ) {
+        partialChargeNodeA.setVisible( visible );
+        partialChargeNodeB.setVisible( visible );
+    }
+
+    public void setBondDipoleVisible( boolean visible ) {
+        bondDipoleNode.setVisible( visible );
     }
 }
